--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<%= link_to "Sign in with Twitch", user_twitch_omniauth_authorize_path %>
+<br>
+<% if user_signed_in? %>
+  <%= current_user.email %>
+  <br>
+  Provider: <%= current_user.provider %>
+<% end %>
